Fixed javascript and prevented image distortion in the about page

--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ body {
     width: 800px;
 }
 #bike {
-    height: 80%;
+    height: auto;
     /* margin: auto; */
     max-width:100%
     /* height: auto; */
